Don't emit keyPressedSignal when QInputMethodEvent::commitString() is empty.

When user switches focus (even using mouse) between tabs/windows
of konsole, ibus will trigger inputMethodEvent(). Most of the time
commitString() will be empty. Do not emit keyPressedSignal in such case,
otherwise konsole will scroll active view to bottom. See bug #236733.

The side effect is when inputmethod is activated, the active view
will not scroll to bottom on keystroke until user has committed
some string.

BUG: 236733
REVIEW: 102238
FIXED-IN : 4.8